--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: "."
       dockerfile: Dockerfile
-    image: ad/domru:latest
+    image: moleus/domru-dev:latest
     container_name: domru
     restart: always
     networks:
