--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,11 +1,11 @@
-name: Create release and publish packages
+name: Build & publish docker image
 
 on:
   workflow_dispatch:
-  push:
+  pull_request:
     branches:
-      - dev
       - master
+      - dev
 
 jobs:
   tag:
@@ -43,6 +43,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean
+          args: release --clean --snapshot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
