--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,23 +7,10 @@ on:
       - master
       - dev
 
+env:
+  BRANCH_NAME: "${{ github.head_ref || github.ref_name }}"
+
 jobs:
-  tag:
-    name: Tag
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_branches: "master,dev"
-
   release:
     name: Create release
     runs-on: ubuntu-latest
@@ -39,11 +26,5 @@ jobs:
         with:
           go-version: 1.22
 
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: ko-build/setup-ko@v0.6
+      - run: ko build --platform=linux/amd64,linux/arm64 --bare -t ${{ env.BRANCH_NAME }}
