--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,10 +11,9 @@ env:
   BRANCH_NAME: "${{ github.head_ref || github.ref_name }}"
 
 jobs:
-  release:
-    name: Create release
+  build_image:
+    name: Build image
     runs-on: ubuntu-latest
-    needs: tag
     steps:
       - name: Checkout
         uses: actions/checkout@v4
