--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,4 +26,6 @@ jobs:
           go-version: 1.22
 
       - uses: ko-build/setup-ko@v0.6
+        env:
+          KO_DOCKER_REPO: ghcr.io/moleus/domru
       - run: ko build --platform=linux/amd64,linux/arm64 --bare -t ${{ env.BRANCH_NAME }}
