--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,4 @@
+---
 name: Create release and publish packages
 
 on:
@@ -6,6 +7,10 @@ on:
     branches:
       - dev
       - master
+
+permissions:
+  packages: write
+  contents: write
 
 jobs:
   tag:
