--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,14 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+.*
+!.gitignore
+!.goreleaser.yml
+!.github
 
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-.idea/
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
-domru
-deploy.sh
-
-.DS_Store
-
 
 # File with credentials
 accounts.json
+account.json
