--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,6 +15,8 @@ permissions:
 
 env:
   BRANCH_NAME: "${{ github.head_ref || github.ref_name }}"
+  KO_DEFAULTPLATFORMS: "linux/amd64,linux/arm64,linux/arm/v7"
+  KO_DEFAULTBASEIMAGE: "gcr.io/distroless/static-debian12"
 
 jobs:
   golangci:
@@ -61,4 +63,23 @@ jobs:
           go-version: 1.22
 
       - uses: ko-build/setup-ko@v0.6
-      - run: ko build --platform=linux/amd64,linux/arm64 --bare -t devel-${{ env.BRANCH_NAME }}
+      - run: ko build --bare -t devel-${{ env.BRANCH_NAME }}
+
+  push_dockerhub:
+    name: Push to DockerHub
+    runs-on: ubuntu-latest
+    needs: build_image
+    steps:
+      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+      - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7 # v5.0.1
+
+      - uses: ko-build/setup-ko@v0.6
+        env:
+          KO_DOCKER_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/domru
+
+      - env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: |
+          echo ${DOCKERHUB_TOKEN} | ko login --username=${DOCKERHUB_USERNAME} --password-stdin index.docker.io
+          ko build --bare -t devel-${{ env.BRANCH_NAME }}
