--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,3 +21,14 @@ kos:
     platforms:
       - "linux/amd64"
       - "linux/arm64"
+      - "linux/arm/v7"
+  - repository: moleus/domru
+    main: .
+    tags:
+      - '{{.Version}}'
+    bare: true
+    preserve_import_paths: false
+    platforms:
+      - "linux/amd64"
+      - "linux/arm64"
+      - "linux/arm/v7"
