fix(ci): fix goreleaser config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,7 +13,9 @@ builds:
 
 kos:
   - repository: ghcr.io/moleus/domru
+    id: "github"
     main: .
+    base_image: "gcr.io/distroless/static-debian12"
     tags:
       - '{{.Version}}'
     bare: true
@@ -23,7 +25,9 @@ kos:
       - "linux/arm64"
       - "linux/arm/v7"
   - repository: moleus/domru
+    id: "dockerhub"
     main: .
+    base_image: "gcr.io/distroless/static-debian12"
     tags:
       - '{{.Version}}'
     bare: true
